# UBL-VCX

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  update-upstreams.yml  vcx-release.yml
config/: project.env.sample
docs/: OPERATING_MODEL.md  OWNERSHIP_BOUNDARY.md  PM2_SETUP.md  README.md  RELEASE_MODEL.md  TEMPLATE_CHECKLIST.md  UPGRADE_ROLLBACK.md
docs/vcx/: README.md  VCX_DISTRIBUTION_MODEL.md  VCX_STANDARD_READINESS_CHECKLIST.md  VCX_STANDARD_STATUS.md
docs/vcx/benchmarks/: VCX_BENCHMARK_PROFILE.md
docs/vcx/conformance/: COVERAGE_MAP.md  README.md
docs/vcx/conformance/fixtures/payloads/: tile01.ic0t  (+19 more)
docs/vcx/conformance/reports/: README.md  SEED_RUN_2026-02-20.md
docs/vcx/interop/: VCX_INTEROP_MATRIX_TEMPLATE.md
docs/vcx/specs/: README.md  VCX_COMPATIBILITY_POLICY.md  VCX_GOVERNANCE_PROCESS.md  VCX_IC0_SPEC.md  VCX_IPR_AND_LICENSING.md  VCX_MANIFEST_SPEC.md  VCX_MIME_REGISTRATION_PLAN.md  VCX_PACK_SPEC.md  VCX_SECURITY_MODEL.md  VCX_SIDECAR_SPEC.md  VCX_SPEC_FREEZE_PROCESS.md
extensions/vcx/: README.md  extension.toml
pm2/: ecosystem.config.cjs
scripts/: bootstrap_pm2.sh  common.sh  install_binary.sh  install_vcx_extension.sh  package_vcx_artifacts.sh  run_gate.sh  smoke.sh  update_refs.sh  vcx_conformance.sh
vcx-pack/: Cargo.toml
vcx-pack/crates/vcx_pack/: Cargo.toml
vcx-pack/crates/vcx_pack/src/: lib.rs
vcx-pack/docs/: VCX_PACK_V1.md
vcx-pack/tools/vcx_enc_cli/: Cargo.toml  USAGE.md
vcx-pack/tools/vcx_enc_cli/src/: main.rs
vcx-pack/tools/vcx_pack_cli/: Cargo.toml
vcx-pack/tools/vcx_pack_cli/src/: main.rs
(+40 files in other folders)
